// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemSelector snapshot ItemSelector demo snapshot 0 1`] = `
<div
  className="bui-item-selector"
  style={
    Object {
      "height": "500px",
    }
  }
>
  <div
    className="bui-scroll bui-scroll-view-scroll-y bui-item-selector-scroll-view-container tph"
    onScroll={[Function]}
    onTouchMove={[Function]}
    style={Object {}}
  >
    <div
      className="bui-item-selector-all-item"
    >
      <div>
        <div
          className="select-item-title"
          id="CRRT"
        >
          当前Item
        </div>
        <div
          className="select-item-buttons"
        >
          <span
            className="bui-item-selector-item"
            onClick={[Function]}
          >
            北京
          </span>
        </div>
      </div>
      <div>
        <div
          className="select-item-title"
          id="GPS"
        >
          定位Item
        </div>
        <div
          className="select-item-buttons"
        >
          <span
            className="bui-item-selector-item"
            onClick={[Function]}
          >
            上海
          </span>
        </div>
      </div>
      <div>
        <div
          className="select-item-title"
          id="HOT"
        >
          热门Item
        </div>
        <div
          className="select-item-buttons"
        >
          <span
            className="bui-item-selector-item"
            onClick={[Function]}
          >
            北京
          </span>
          <span
            className="bui-item-selector-item"
            onClick={[Function]}
          >
            上海
          </span>
          <span
            className="bui-item-selector-item"
            onClick={[Function]}
          >
            广州
          </span>
        </div>
      </div>
      <div
        className="bui-item-selector-list-container"
      >
        <div>
          <div
            className="select-item-title"
            id="A"
          >
            A
          </div>
          <ul
            className="bui-item-selector-list"
          >
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              安康
            </li>
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              鞍山
            </li>
          </ul>
        </div>
        <div>
          <div
            className="select-item-title"
            id="B"
          >
            B
          </div>
          <ul
            className="bui-item-selector-list"
          >
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              巴音郭楞
            </li>
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              巴中
            </li>
          </ul>
        </div>
        <div>
          <div
            className="select-item-title"
            id="C"
          >
            C
          </div>
          <ul
            className="bui-item-selector-list"
          >
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              沧州
            </li>
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              长春
            </li>
          </ul>
        </div>
        <div>
          <div
            className="select-item-title"
            id="D"
          >
            D
          </div>
          <ul
            className="bui-item-selector-list"
          >
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              大理
            </li>
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              大连
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ItemSelector snapshot ItemSelector demo snapshot 0 2`] = `
<div
  className="bui-item-selector"
  style={
    Object {
      "height": "500px",
    }
  }
>
  <div
    className="bui-item-selector-title"
  >
    选择Item
    <div
      className="bui-item-selector-btn-close"
      onClick={[Function]}
    >
      ✕
    </div>
  </div>
  <div
    className="bui-scroll bui-scroll-view-scroll-y bui-item-selector-scroll-view-container tph container-has-title"
    onScroll={[Function]}
    onTouchMove={[Function]}
    style={Object {}}
  >
    <div
      className="bui-item-selector-all-item"
    >
      <div>
        <div
          className="select-item-title"
          id=""
        >
          当前Item
        </div>
        <div
          className="select-item-buttons"
        >
          <span
            className="bui-item-selector-item"
            onClick={[Function]}
          >
            北京
          </span>
        </div>
      </div>
      <div>
        <div
          className="select-item-title"
          id=""
        >
          定位Item
        </div>
        <div
          className="select-item-buttons"
        >
          <span
            className="bui-item-selector-item"
            onClick={[Function]}
          >
            上海
          </span>
        </div>
      </div>
      <div>
        <div
          className="select-item-title"
          id=""
        >
          热门Item
        </div>
        <div
          className="select-item-buttons"
        >
          <span
            className="bui-item-selector-item"
            onClick={[Function]}
          >
            北京
          </span>
          <span
            className="bui-item-selector-item"
            onClick={[Function]}
          >
            上海
          </span>
          <span
            className="bui-item-selector-item"
            onClick={[Function]}
          >
            广州
          </span>
        </div>
      </div>
      <div
        className="bui-item-selector-list-container"
      >
        <div>
          <div
            className="select-item-title"
            id=""
          >
            A
          </div>
          <ul
            className="bui-item-selector-list"
          >
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              安康
            </li>
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              鞍山
            </li>
          </ul>
        </div>
        <div>
          <div
            className="select-item-title"
            id=""
          >
            B
          </div>
          <ul
            className="bui-item-selector-list"
          >
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              巴音郭楞
            </li>
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              巴中
            </li>
          </ul>
        </div>
        <div>
          <div
            className="select-item-title"
            id=""
          >
            C
          </div>
          <ul
            className="bui-item-selector-list"
          >
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              沧州
            </li>
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              长春
            </li>
          </ul>
        </div>
        <div>
          <div
            className="select-item-title"
            id=""
          >
            D
          </div>
          <ul
            className="bui-item-selector-list"
          >
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              大理
            </li>
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              大连
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ItemSelector snapshot ItemSelector demo snapshot 0 3`] = `
<div
  className="bui-item-selector"
  style={
    Object {
      "height": "500px",
    }
  }
>
  <div
    className="bui-scroll bui-scroll-view-scroll-y bui-item-selector-scroll-view-container tph"
    onScroll={[Function]}
    onTouchMove={[Function]}
    style={Object {}}
  >
    <div
      className="bui-item-selector-all-item"
    >
      <div>
        <div
          className="select-item-title"
          id=""
        >
          当前Item
        </div>
        <div
          className="select-item-buttons"
        >
          <span
            className="bui-item-selector-item"
            onClick={[Function]}
          >
            北京
          </span>
        </div>
      </div>
      <div>
        <div
          className="select-item-title"
          id=""
        >
          定位Item
        </div>
        <div
          className="select-item-buttons"
        >
          <span
            className="bui-item-selector-item"
            onClick={[Function]}
          >
            上海
          </span>
        </div>
      </div>
      <div>
        <div
          className="select-item-title"
          id=""
        >
          热门Item
        </div>
        <div
          className="select-item-buttons"
        >
          <span
            className="bui-item-selector-item"
            onClick={[Function]}
          >
            北京
          </span>
          <span
            className="bui-item-selector-item"
            onClick={[Function]}
          >
            上海
          </span>
          <span
            className="bui-item-selector-item"
            onClick={[Function]}
          >
            广州
          </span>
        </div>
      </div>
      <div
        className="bui-item-selector-list-container"
      >
        <div>
          <div
            className="select-item-title"
            id=""
          >
            A
          </div>
          <ul
            className="bui-item-selector-list"
          >
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              安康
            </li>
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              鞍山
            </li>
          </ul>
        </div>
        <div>
          <div
            className="select-item-title"
            id=""
          >
            B
          </div>
          <ul
            className="bui-item-selector-list"
          >
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              巴音郭楞
            </li>
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              巴中
            </li>
          </ul>
        </div>
        <div>
          <div
            className="select-item-title"
            id=""
          >
            C
          </div>
          <ul
            className="bui-item-selector-list"
          >
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              沧州
            </li>
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              长春
            </li>
          </ul>
        </div>
        <div>
          <div
            className="select-item-title"
            id=""
          >
            D
          </div>
          <ul
            className="bui-item-selector-list"
          >
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              大理
            </li>
            <li
              className="bui-item-selector-list-item"
              onClick={[Function]}
            >
              大连
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
